--- a/App_LocalResources/ChangePassword.aspx.pt-br.resx
+++ b/App_LocalResources/ChangePassword.aspx.pt-br.resx
@@ -124,7 +124,7 @@
     <value>MetraNet</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirmar senha</value>
+    <value>Senha de confirmação</value>
   </data>
   <data name="tbNewPasswordResource1.Label" xml:space="preserve">
     <value>Nova senha</value>
@@ -136,9 +136,9 @@
     <value>Nome do usuário</value>
   </data>
   <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
-    <value>&lt;ul&gt;&lt;li&gt;&amp;middot;As senhas devem conter pelo menos 7 caracteres&lt;/li&gt;
-               &lt;li&gt;&amp;middot;As senhas devem conter números e letras&lt;/li&gt;
-               &lt;li&gt;&amp;middot;As senhas alteradas não podem ser nenhuma das 4 anteriores&lt;/li&gt;&lt;/ul&gt;</value>
+    <value>&lt;ul&gt;&lt;li&gt;&amp;middot;As senhas devem ter pelo menos 7 caracteres&lt;/li&gt;
+                             &lt;li&gt;&amp;middot;As senhas devem contar caracteres alfanuméricos&lt;/li&gt;
+                             &lt;li&gt;&amp;middot;As senhas, quando são alteradas, não podem ser nenhuma das 4 anteriores&lt;/li&gt;&lt;/ul&gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
     <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;OBS.:&lt;/b&gt; Como um Super Usuário, você deve alterar a entrada no ServerAccess em cada máquina e criptografá-la.</value>
