--- a/App_LocalResources/GeneratePassword.aspx.pt-br.resx
+++ b/App_LocalResources/GeneratePassword.aspx.pt-br.resx
@@ -139,7 +139,7 @@
     <value>MetraNet</value>
   </data>
   <data name="TEXT_GENERATE_PASSWORD" xml:space="preserve">
-    <value>Verifique se o proprietário da conta consegue responder a questão abaixo antes de gerar uma nova senha.  A senha gerada será enviada para {0}.</value>
+    <value>Certificar-se de que o proprietário da conta possa responder a pergunta abaixo antes de gerar uma nova senha. A senha gerada será enviada para {0}.</value>
   </data>
   <data name="TEXT_NO_EMAIL" xml:space="preserve">
     <value>A conta deve ter um email válido no arquivo para poder ter uma nova senha gerada e enviada a eles.</value>
