--- a/DataExportReportManagement/App_LocalResources/CreateScheduleReportInstanceMonthly.aspx.pt-br.resx
+++ b/DataExportReportManagement/App_LocalResources/CreateScheduleReportInstanceMonthly.aspx.pt-br.resx
@@ -199,6 +199,6 @@
     <value>Tipo de agenda</value>
   </data>
   <data name="TEXT_DEF_EXECUTE_DAY_OF_MONTH" xml:space="preserve">
-    <value>[pt-BR]Execute Day Of Month</value>
+    <value>Executar dia do mês</value>
   </data>
 </root>
