--- a/DataExportReportManagement/App_LocalResources/QueueAdHocReports.aspx.pt-br.resx
+++ b/DataExportReportManagement/App_LocalResources/QueueAdHocReports.aspx.pt-br.resx
@@ -206,7 +206,7 @@
     <value>120</value>
   </data>
   <data name="pmFTPPasswordResource1.OptionalExtConfig" xml:space="preserve">
-    <value>Comprimento máx. = 50</value>
+    <value>maxLength:50</value>
   </data>
   <data name="pmFTPPasswordResource1.Text" xml:space="preserve">
     <value></value>
@@ -239,7 +239,7 @@
     <value>0</value>
   </data>
   <data name="tbControlFileLocationResource1.OptionalExtConfig" xml:space="preserve">
-    <value>Comprimento máx. = 50</value>
+    <value>maxLength:50</value>
   </data>
   <data name="tbControlFileLocationResource1.Text" xml:space="preserve">
     <value></value>
@@ -248,7 +248,7 @@
     <value></value>
   </data>
   <data name="tbControlFileLocationResource1.ValidationRegex" xml:space="preserve">
-    <value>nulo</value>
+    <value>null</value>
   </data>
   <data name="tbFTPUserResource1.ControlHeight" xml:space="preserve">
     <value></value>
@@ -275,7 +275,7 @@
     <value>0</value>
   </data>
   <data name="tbFTPUserResource1.OptionalExtConfig" xml:space="preserve">
-    <value>Comprimento máx. = 50</value>
+    <value>maxLength:50</value>
   </data>
   <data name="tbFTPUserResource1.Text" xml:space="preserve">
     <value></value>
@@ -284,7 +284,7 @@
     <value></value>
   </data>
   <data name="tbFTPUserResource1.ValidationRegex" xml:space="preserve">
-    <value>nulo</value>
+    <value>null</value>
   </data>
   <data name="tbReportDestinationResource1.ControlHeight" xml:space="preserve">
     <value></value>
@@ -311,7 +311,7 @@
     <value>0</value>
   </data>
   <data name="tbReportDestinationResource1.OptionalExtConfig" xml:space="preserve">
-    <value>Comprimento máx. = 50</value>
+    <value>maxLength:50</value>
   </data>
   <data name="tbReportDestinationResource1.Text" xml:space="preserve">
     <value></value>
@@ -320,7 +320,7 @@
     <value></value>
   </data>
   <data name="tbReportDestinationResource1.ValidationRegex" xml:space="preserve">
-    <value>nulo</value>
+    <value>null</value>
   </data>
   <data name="TEXT_DEF_COMPRESS_OUTPUT_FILE" xml:space="preserve">
     <value>Comprimir relatório</value>
