--- a/DataExportReportManagement/App_LocalResources/ShowReportInstanceDetails.aspx.pt-br.resx
+++ b/DataExportReportManagement/App_LocalResources/ShowReportInstanceDetails.aspx.pt-br.resx
@@ -215,7 +215,7 @@
     <value>120</value>
   </data>
   <data name="pmFTPPasswordResource1.OptionalExtConfig" xml:space="preserve">
-    <value>Comprimento máx. = 50</value>
+    <value>maxLength:50</value>
   </data>
   <data name="pmFTPPasswordResource1.Text" xml:space="preserve">
     <value></value>
@@ -248,7 +248,7 @@
     <value>0</value>
   </data>
   <data name="tbControlFileLocationResource1.OptionalExtConfig" xml:space="preserve">
-    <value>Comprimento máx. = 50</value>
+    <value>maxLength:50</value>
   </data>
   <data name="tbControlFileLocationResource1.Text" xml:space="preserve">
     <value></value>
@@ -284,7 +284,7 @@
     <value>0</value>
   </data>
   <data name="tbFTPUserResource1.OptionalExtConfig" xml:space="preserve">
-    <value>Comprimento máx. = 50</value>
+    <value>maxLength:50</value>
   </data>
   <data name="tbFTPUserResource1.Text" xml:space="preserve">
     <value></value>
@@ -320,7 +320,7 @@
     <value>0</value>
   </data>
   <data name="tbReportDestinationResource1.OptionalExtConfig" xml:space="preserve">
-    <value>Comprimento máx. = 50</value>
+    <value>maxLength:50</value>
   </data>
   <data name="tbReportDestinationResource1.Text" xml:space="preserve">
     <value></value>
