--- a/Tax/App_LocalResources/BillSoftExemptions.aspx.pt-br.resx
+++ b/Tax/App_LocalResources/BillSoftExemptions.aspx.pt-br.resx
@@ -121,7 +121,7 @@
     <value>MetraNet</value>
   </data>
   <data name="GRID_TITLE" xml:space="preserve">
-    <value>Isenções de BillSoft</value>
+    <value>Isenções BillSoft</value>
   </data>
   <data name="TEXT_ACCOUNT_ID" xml:space="preserve">
     <value>ID de conta</value>
@@ -130,19 +130,19 @@
     <value>Ações</value>
   </data>
   <data name="TEXT_ADD" xml:space="preserve">
-    <value>Adicionar nova isenção de BillSoft</value>
+    <value>Adicionar nova isenção BillSoft</value>
   </data>
   <data name="TEXT_APPLY_TO_ACCOUNT_DESCENDENTS" xml:space="preserve">
     <value>Aplicar aos descendentes da conta</value>
   </data>
   <data name="TEXT_CERTIFICATE_ID" xml:space="preserve">
-    <value>ID do comprovante</value>
+    <value>ID do certificado</value>
   </data>
   <data name="TEXT_CONFIRM_CONTINUE" xml:space="preserve">
     <value>Tem certeza que deseja excluir essa extensão?</value>
   </data>
   <data name="TEXT_CREATE_DATE" xml:space="preserve">
-    <value>Data de criação</value>
+    <value>Criar data</value>
   </data>
   <data name="TEXT_EDIT" xml:space="preserve">
     <value>Editar isenção</value>
@@ -160,7 +160,7 @@
     <value>Data de início</value>
   </data>
   <data name="TEXT_TAX_LEVEL" xml:space="preserve">
-    <value>Nível de impostos</value>
+    <value>Nível de imposto</value>
   </data>
   <data name="TEXT_TAX_TYPE" xml:space="preserve">
     <value>Tipo de imposto</value>
@@ -172,6 +172,6 @@
     <value>Data de atualização</value>
   </data>
   <data name="TEXT_VIEW" xml:space="preserve">
-    <value>Visualizar isenção</value>
+    <value>Exibir isenção</value>
   </data>
 </root>
