--- a/Account/App_LocalResources/AddAccount.aspx.pt-br.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.pt-br.resx
@@ -202,7 +202,7 @@
     <value>Mês de início</value>
   </data>
   <data name="lblUsernameOKResource1.Text" xml:space="preserve">
-    <value>Nome de usuário</value>
+    <value>Nome de usuário OK</value>
   </data>
   <data name="ListItemResource1.Text" xml:space="preserve">
     <value>Nenhum</value>
@@ -226,7 +226,7 @@
     <value>Conta pai</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirmar senha</value>
+    <value>Senha de confirmação</value>
   </data>
   <data name="tbOtherResource1.Label" xml:space="preserve">
     <value>Outro</value>
@@ -259,6 +259,6 @@
     <value>Nome do usuário</value>
   </data>
   <data name="ddAuthenticationTypeResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Authentication Type</value>
+    <value>Tipo de autenticação</value>
   </data>
 </root>
