--- a/Account/App_LocalResources/GenericAddAccount.aspx.pt-br.resx
+++ b/Account/App_LocalResources/GenericAddAccount.aspx.pt-br.resx
@@ -178,7 +178,7 @@
     <value>Adicionar conta</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet</value>
+    <value>MetraNet </value>
   </data>
   <data name="pnlAccountInfoResource1.Text" xml:space="preserve">
     <value>Informações de conta</value>
@@ -199,7 +199,7 @@
     <value>False</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirmar senha</value>
+    <value>Senha de confirmação</value>
   </data>
   <data name="tbConfirmPasswordResource1.MaxLength" xml:space="preserve">
     <value>-1</value>
@@ -229,7 +229,7 @@
     <value>0</value>
   </data>
   <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Custom Security Question</value>
+    <value>Pergunta de segurança personalizada</value>
   </data>
   <data name="ddCurrencyResource1.Label" xml:space="preserve">
     <value>Moeda</value>
