--- a/Account/App_LocalResources/UpdateSystemAccount.aspx.pt-br.resx
+++ b/Account/App_LocalResources/UpdateSystemAccount.aspx.pt-br.resx
@@ -124,7 +124,7 @@
     <value>Conta pai</value>
   </data>
   <data name="LblAuthenticationType.Label" xml:space="preserve">
-    <value>[pt-BR]Authentication Type</value>
+    <value>Tipo de autenticação</value>
   </data>
   <data name="LblBrandedSite.Label" xml:space="preserve">
     <value>Site da marca</value>
@@ -160,7 +160,7 @@
     <value>MetraNet</value>
   </data>
   <data name="PendingChangeWarning" xml:space="preserve">
-    <value>[pt-BR]This account already has a pending change in the approval framework queue. {0} Click here to view pending changes.</value>
+    <value>Essa conta já tem uma alteração pendente na fila de estrutura de aprovação. {0} Clique aqui para exibir as alterações pendentes.</value>
   </data>
   <data name="pnlAccountInfoResource1.Text" xml:space="preserve">
     <value>Informações de conta</value>
