--- a/Adjustments/App_LocalResources/CreateCreditNote.aspx.pt-br.resx
+++ b/Adjustments/App_LocalResources/CreateCreditNote.aspx.pt-br.resx
@@ -118,54 +118,54 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="btnIssueCreditNoteResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Issue Credit Note</value>
+    <value>Emitir nota de crédito</value>
   </data>
   <data name="btnCancelResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Cancel</value>
+    <value>Cancelar</value>
   </data>
   <data name="CommentTextBoxResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Comment</value>
+    <value>Comentário</value>
   </data>
-   <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Credit Note Template To Use</value>
+  <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
+    <value>Modelo de nota de crédito para usar</value>
   </data>
   <data name="ddTimeIntervalsResource1.Text" xml:space="preserve">
-    <value>7 [pt-BR]Days,30 [pt-BR]Days,90 [pt-BR]Days,120 [pt-BR]Days,365 [pt-BR]Days</value>
+    <value>7 dias,30 dias,90 dias,120 dias,365 dias</value>
   </data>
   <data name="ddTimeIntervalsResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Adjustments Issued In The Past</value>
+    <value>Ajustes emitidos no passado</value>
   </data>
   <data name="MTFilterGrid1Resource1.Title" xml:space="preserve">
-    <value>[pt-BR]Credit Note Documents</value>
+    <value>Documentos de notas de crédito</value>
   </data>
   <data name="MTPanel1Resource1.Text" xml:space="preserve">
-    <value>[pt-BR]Create Credit Note Document for Adjustment Issued</value>
+    <value>Criar documento de nota de crédito para ajuste emitido</value>
   </data>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
-    <value>[pt-BR]No records found.</value>
+    <value>Nenhum registro encontrado.</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>[pt-BR]MetraNet - Create Credit Note Document for Adjustments Issued</value>
-  </data>   
+    <value>MetraNet - Criar documento de nota de crédito para ajuste emitido</value>
+  </data>
   <data name="TEXT_ADJUSTMENT_TYPE" xml:space="preserve">
-    <value>[pt-BR]Adjustment</value>
+    <value>Ajuste</value>
   </data>
   <data name="TEXT_AMOUNT" xml:space="preserve">
-    <value>[pt-BR]Amount</value>
+    <value>Valor</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_IDENTIFIER" xml:space="preserve">
-    <value>[pt-BR]Credit Note Identifier</value>
+    <value>Identificador de nota de crédito</value>
   </data>
   <data name="TEXT_DATE" xml:space="preserve">
-    <value>[pt-BR]Date</value>
+    <value>Data </value>
   </data>
   <data name="TEXT_DESCRIPTION" xml:space="preserve">
-    <value>[pt-BR]Description</value>
+    <value>Descrição</value>
   </data>
   <data name="TEXT_DISPLAY_ADJUSTMENT_TYPE" xml:space="preserve">
-    <value>[pt-BR]Adjustment</value>
+    <value>Ajuste</value>
   </data>
   <data name="TEXT_DISPLAY_AMOUNT" xml:space="preserve">
-    <value>[pt-BR]Amount</value>
-  </data>  
+    <value>Valor</value>
+  </data>
 </root>
