--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.pt-br.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.pt-br.resx
@@ -130,10 +130,10 @@
     <value>Data do ajuste</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Internal Descrição</value>
+    <value>Descrição interna</value>
   </data>
   <data name="adjDescriptionTextBoxResource2.Label" xml:space="preserve">
-    <value>[pt-BR]Invoice Description</value>
+    <value>Descrição de fatura</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.MaxLength" xml:space="preserve">
     <value>-1</value>
@@ -154,16 +154,16 @@
     <value>True</value>
   </data>
   <data name="cbIssueCreditNoteResource1.BoxLabel" xml:space="preserve">
-    <value>[pt-BR]Issue Credit Note For This Adjustment</value>
+    <value>Emitir nota de crédito para esse ajuste</value>
   </data>
   <data name="CommentTextBoxResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Comment</value>
+    <value>Comentário</value>
   </data>
   <data name="ddBillingPeriod1.Label" xml:space="preserve">
     <value>Período de faturamento</value>
   </data>
   <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Credit Note Template To Use</value>
+    <value>Modelo de nota de crédito para usar</value>
   </data>
   <data name="ddReasonCodeResource1.AllowBlank" xml:space="preserve">
     <value>False</value>
@@ -181,7 +181,7 @@
     <value>Emitir ajuste diverso</value>
   </data>
   <data name="MTPanel2Resource1.Text" xml:space="preserve">
-    <value>[pt-BR]Issue Credit Note For This Adjustment</value>
+    <value>Emitir nota de crédito para esse ajuste</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
@@ -217,7 +217,7 @@
     <value>Ilimitado</value>
   </data>
   <data name="adjAmountFldResourceTaxCounty.Label" xml:space="preserve">
-    <value>[pt-BR]Tax County</value>
+    <value>Imposto do condado</value>
   </data>
   <data name="adjAmountFldResourceTaxCounty.MaxLenght" xml:space="preserve">
     <value>-1</value>
@@ -226,7 +226,7 @@
     <value>0</value>
   </data>
   <data name="adjAmountFldResourceTaxFederal.Label" xml:space="preserve">
-    <value>[pt-BR]Tax Federal</value>
+    <value>Imposto federal</value>
   </data>
   <data name="adjAmountFldResourceTaxFederal.MaxLenght" xml:space="preserve">
     <value>-1</value>
@@ -235,7 +235,7 @@
     <value>0</value>
   </data>
   <data name="adjAmountFldResourceTaxLocal.Label" xml:space="preserve">
-    <value>[pt-BR]Tax Local</value>
+    <value>Imposto local</value>
   </data>
   <data name="adjAmountFldResourceTaxLocal.MaxLenght" xml:space="preserve">
     <value>-1</value>
@@ -244,7 +244,7 @@
     <value>0</value>
   </data>
   <data name="adjAmountFldResourceTaxOther.Label" xml:space="preserve">
-    <value>[pt-BR]Tax Other</value>
+    <value>Outros impostos</value>
   </data>
   <data name="adjAmountFldResourceTaxOther.MaxLenght" xml:space="preserve">
     <value>-1</value>
@@ -253,7 +253,7 @@
     <value>0</value>
   </data>
   <data name="adjAmountFldResourceTaxState.Label" xml:space="preserve">
-    <value>[pt-BR]Tax State</value>
+    <value>Imposto estadual</value>
   </data>
   <data name="adjAmountFldResourceTaxState.MaxLenght" xml:space="preserve">
     <value>-1</value>
@@ -268,12 +268,12 @@
     <value>0</value>
   </data>
   <data name="adjAmountFldResourceTaxTotal.Label" xml:space="preserve">
-    <value>[pt-BR]Total Adjustment Being Issued</value>
+    <value>Ajuste total sendo emitido</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_CREATED" xml:space="preserve">
-    <value>[pt-BR]A credit note for this Miscellaneous Adjustment was created.</value>
+    <value>Foi criada uma nota de crédito para esse ajuste diverso.</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_PENDING" xml:space="preserve">
-    <value>[pt-BR]A credit note for this Miscellaneous Adjustment will be created when this Miscellaneous Adjusment is approved.</value>
+    <value>Uma nota de crédito para esse ajuste diverso será criada quando esse ajuste diverso for aprovado.</value>
   </data>
 </root>
