--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.pt-br.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.pt-br.resx
@@ -118,51 +118,51 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
-    <value>[pt-BR]No records found.</value>
+    <value>Nenhum registro encontrado.</value>
   </data>
   <data name="MTFilterGrid1Resource1.Title" xml:space="preserve">
-    <value>[pt-BR]Credit Note Documents</value>
+    <value>Documentos de notas de crédito</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>[pt-BR]MetraNet - View Credit Notes Issued</value>
+    <value>MetraNet - Exibir notas de crédito emitidas</value>
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
-    <value>[pt-BR]Account</value>
+    <value>Conta</value>
   </data>
   <data name="TEXT_AMOUNT" xml:space="preserve">
-    <value>[pt-BR]Amount</value>
+    <value>Valor</value>
   </data>
   <data name="TEXT_DISPLAY_AMOUNT" xml:space="preserve">
-    <value>[pt-BR]Amount</value>
+    <value>Valor</value>
   </data>
   <data name="TEXT_CREATED_BY" xml:space="preserve">
-    <value>[pt-BR]Created By</value>
+    <value>Criado por</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_IDENTIFIER" xml:space="preserve">
-    <value>[pt-BR]Credit Note Identifier</value>
+    <value>Identificador de nota de crédito</value>
   </data>
   <data name="TEXT_DATE" xml:space="preserve">
-    <value>[pt-BR]Date</value>
+    <value>Data</value>
   </data>
   <data name="TEXT_ID" xml:space="preserve">
-    <value>[pt-BR]Id</value>
+    <value>ID</value>
   </data>
   <data name="TEXT_TAX" xml:space="preserve">
-    <value>[pt-BR]Tax</value>
+    <value>Imposto</value>
   </data>
   <data name="TEXT_DISPLAY_TAX" xml:space="preserve">
-    <value>[pt-BR]Tax</value>
+    <value>Imposto</value>
   </data>
   <data name="TEXT_TOTAL" xml:space="preserve">
-    <value>[pt-BR]Total</value>
+    <value>Total</value>
   </data>
   <data name="TEXT_DISPLAY_TOTAL" xml:space="preserve">
-    <value>[pt-BR]Total</value>
+    <value>Total</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
-    <value>[pt-BR]Status</value>
+    <value>Status</value>
   </data>
   <data name="TEXT_STATUS_INFORMATION" xml:space="preserve">
-    <value>[pt-BR]Status Information</value>
+    <value>Informações de status</value>
   </data>
 </root>
