--- a/App_GlobalResources/KeyTerms.pt-br.resx
+++ b/App_GlobalResources/KeyTerms.pt-br.resx
@@ -259,12 +259,12 @@
     <value>Taxas de utilização (Agregado)</value>
   </data>
   <data name="TEXT_KEYTERM_CORE_SUBSCRIBER" xml:space="preserve">
-    <value>[pt-BR]Core Subscriber</value>
+    <value>Assinante principal</value>
   </data>
   <data name="TEXT_KEYTERM_DEPARTMENT_ACCOUNT" xml:space="preserve">
-    <value>[pt-BR]Department Account</value>
+    <value>Conta do departamento</value>
   </data>
   <data name="TEXT_KEYTERM_GSM_SERVICE_ACCOUNT" xml:space="preserve">
-    <value>[pt-BR]GSM Service Account</value>
+    <value>Conta de serviço GSM</value>
   </data>
 </root>
