--- a/App_GlobalResources/MainMenu.pt-br.resx
+++ b/App_GlobalResources/MainMenu.pt-br.resx
@@ -121,7 +121,7 @@
     <value>Detalhes da conta</value>
   </data>
   <data name="TEXT_ACCOUNT_QUOTING_LIST" xml:space="preserve">
-    <value>[pt-BR]Quotes</value>
+    <value>Cotações</value>
   </data>
   <data name="TEXT_ACCOUNT_STATE" xml:space="preserve">
     <value>Estado da conta</value>
@@ -142,7 +142,7 @@
     <value>Adicionar contas com serviço web</value>
   </data>
   <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
-    <value>[pt-BR]Add child Account</value>
+    <value>Adicionar conta filha</value>
   </data>
   <data name="TEXT_ADD_CSR" xml:space="preserve">
     <value>Adicionar CSR</value>
@@ -154,7 +154,7 @@
     <value>Adicionar novos parâmetros de relatório</value>
   </data>
   <data name="TEXT_ADD_PARTITION" xml:space="preserve">
-    <value>[pt-BR]Add Partition</value>
+    <value>Adicionar partição</value>
   </data>
   <data name="TEXT_ADJUST_TRANSACTIONS" xml:space="preserve">
     <value>Ajustar transações</value>
@@ -169,10 +169,10 @@
     <value>Opções avançadas</value>
   </data>
   <data name="TEXT_AGREEMENT_TEMPLATES" xml:space="preserve">
-    <value>[pt-BR]Agreement Templates</value>
+    <value>Modelos de contrato</value>
   </data>
   <data name="TEXT_AGREEMENTS" xml:space="preserve">
-    <value>[pt-BR]Agreements</value>
+    <value>Contratos</value>
   </data>
   <data name="TEXT_ALL_FILES" xml:space="preserve">
     <value>Todos os trabalhos</value>
@@ -181,7 +181,7 @@
     <value>Todos os intervalos</value>
   </data>
   <data name="TEXT_ANALYTICS" xml:space="preserve">
-    <value>[pt-BR]Analytics</value>
+    <value>Análises</value>
   </data>
   <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
     <value>Log de auditoria da aplicação</value>
@@ -190,7 +190,7 @@
     <value>Aprovações</value>
   </data>
   <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
-    <value>[pt-BR]Assign Bill Messages</value>
+    <value>Atribuir mensagens de fatura</value>
   </data>
   <data name="TEXT_ASSIGN_UPDATE_REPORT_PARAMETERS" xml:space="preserve">
     <value>Atribuir parâmetros de relatório</value>
@@ -235,7 +235,7 @@
     <value>Intervalos faturáveis</value>
   </data>
   <data name="TEXT_BILLING_MANAGEMENT" xml:space="preserve">
-    <value>Gerenciamento de faturamento</value>
+    <value>Faturamento</value>
   </data>
   <data name="TEXT_BULK_ADJUST_TRANSACTIONS" xml:space="preserve">
     <value>Transações de ajuste em massa</value>
@@ -274,13 +274,13 @@
     <value>Criar retornos/reexecuções</value>
   </data>
   <data name="TEXT_CREATE_CREDIT_NOTE" xml:space="preserve">
-    <value>[pt-BR]Create Credit Note</value>
+    <value>Criar notas de crédito</value>
   </data>
   <data name="TEXT_CREATE_NEW_REPORT_INSTANCE" xml:space="preserve">
     <value>Adicionar nova instância de relatório</value>
   </data>
   <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
-    <value>[pt-BR]Create Quote</value>
+    <value>Criar cotação</value>
   </data>
   <data name="TEXT_CREATE_REMITTANCE" xml:space="preserve">
     <value>Criar remessa</value>
@@ -289,7 +289,7 @@
     <value>Painel</value>
   </data>
   <data name="TEXT_DATA_EXPORT_REPORT_MANAGEMENT" xml:space="preserve">
-    <value>Gerenciamento do relatório de exportação de dados</value>
+    <value>Exportação de dados</value>
   </data>
   <data name="TEXT_DEFAULT_SECURITY" xml:space="preserve">
     <value>Segurança padrão</value>
@@ -298,10 +298,10 @@
     <value>Rejeitado</value>
   </data>
   <data name="TEXT_EDIT_MAPPING" xml:space="preserve">
-    <value>Editar pseudônimo</value>
+    <value>Pseudônimos</value>
   </data>
   <data name="TEXT_EDIT_NAMESPACES" xml:space="preserve">
-    <value>Editar espaço de nomes</value>
+    <value>Namespaces</value>
   </data>
   <data name="TEXT_EDIT_TEMPLATE" xml:space="preserve">
     <value>Editar modelo</value>
@@ -331,10 +331,10 @@
     <value>Resumo por estágio e plugin</value>
   </data>
   <data name="TEXT_FEEDS" xml:space="preserve">
-    <value>[pt-BR]Feeds</value>
+    <value>Feeds</value>
   </data>
   <data name="TEXT_FILE_MANAGEMENT" xml:space="preserve">
-    <value>Gerenciamento de arquivos</value>
+    <value>Processamento de arquivos</value>
   </data>
   <data name="TEXT_FILES_IN_LAST_2_DAYS" xml:space="preserve">
     <value>Trabalhos nos 2 últimos dias</value>
@@ -364,61 +364,61 @@
     <value>Efetuar um pagamento</value>
   </data>
   <data name="TEXT_MANAGE" xml:space="preserve">
-    <value>[pt-BR]Manage</value>
+    <value>Gerenciar</value>
   </data>
   <data name="TEXT_MANAGE_ACCOUNTS" xml:space="preserve">
     <value>Gerenciar contas</value>
   </data>
   <data name="TEXT_MANAGE_ADJUSTMENTS" xml:space="preserve">
-    <value>Gerenciar ajustes</value>
+    <value>Ajustes</value>
   </data>
   <data name="TEXT_MANAGE_AGREEMENT_TEMPLATES" xml:space="preserve">
-    <value>[pt-BR]Manage Agreement Templates</value>
+    <value>Gerenciar modelos de conta</value>
   </data>
   <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
-    <value>[pt-BR]Decision Types</value>
+    <value>Tipos de decisão</value>
   </data>
   <data name="TEXT_MANAGE_BILLSOFT_EXEMPTIONS" xml:space="preserve">
-    <value>[pt-BR]Manage BillSoft Exemptions</value>
+    <value>Gerenciar isenções BillSoft</value>
   </data>
   <data name="TEXT_MANAGE_BILLSOFT_OVERRIDES" xml:space="preserve">
-    <value>[pt-BR]Manage BillSoft Overrides</value>
+    <value>Gerenciar substituições BillSoft</value>
   </data>
   <data name="TEXT_MANAGE_CALENDARS" xml:space="preserve">
-    <value>Gerenciar calendários</value>
+    <value>Calendários</value>
   </data>
   <data name="TEXT_MANAGE_DATA_EXPORT_FRAMEWORK" xml:space="preserve">
-    <value>Gerenciamento do relatório de exportação de dados</value>
+    <value>Exportação de dados</value>
   </data>
   <data name="TEXT_MANAGE_DEFAULT_SECURITY" xml:space="preserve">
     <value>Segurança padrão</value>
   </data>
   <data name="TEXT_MANAGE_MISC_ADJUSTMENTS" xml:space="preserve">
-    <value>Gerenciar diversos Ajustes</value>
+    <value>Ajustes diversos</value>
   </data>
   <data name="TEXT_MANAGE_NON_STANDARD_CHARGES" xml:space="preserve">
-    <value>Gerenciar cobranças extraordinárias</value>
+    <value>Cobranças extraordinárias</value>
   </data>
   <data name="TEXT_MANAGE_ORPHAN_ADJUSTMENTS" xml:space="preserve">
-    <value>Gerenciar ajustes órfãos</value>
+    <value>Ajustes órfãos</value>
   </data>
   <data name="TEXT_MANAGE_REPORTS" xml:space="preserve">
     <value>Gerenciar relatórios</value>
   </data>
   <data name="TEXT_MANAGE_ROLES" xml:space="preserve">
-    <value>Gerenciar funções</value>
+    <value>Funções do usuário</value>
   </data>
   <data name="TEXT_MANAGE_SECURITY" xml:space="preserve">
     <value>Gerenciar segurança</value>
   </data>
   <data name="TEXT_MASTER_OFFERINGS" xml:space="preserve">
-    <value>[pt-BR]Master Product Offerings</value>
+    <value>Ofertas de produto mestre</value>
   </data>
   <data name="TEXT_MENU_GENERATE_PASSWORD" xml:space="preserve">
     <value>Gerar senha</value>
   </data>
   <data name="TEXT_MENU_ISSUE_MISC_ADJUSTMENT" xml:space="preserve">
-    <value>Diversos Ajustes</value>
+    <value>Ajustes diversos</value>
   </data>
   <data name="TEXT_MENU_UNLOCK_ACCOUNT" xml:space="preserve">
     <value>Bloquear / Desbloquear conta</value>
@@ -433,7 +433,7 @@
     <value>Catálogo de produtos</value>
   </data>
   <data name="TEXT_MISC_ADJUSTMENTS" xml:space="preserve">
-    <value>Diversos Ajustes</value>
+    <value>Ajustes diversos</value>
   </data>
   <data name="TEXT_MOVE_ACCOUNT" xml:space="preserve">
     <value>Mover conta</value>
@@ -472,7 +472,7 @@
     <value>Pagar para as contas</value>
   </data>
   <data name="TEXT_PAY_FOR_ME" xml:space="preserve">
-    <value>Editar pagadores</value>
+    <value>Pagadores</value>
   </data>
   <data name="TEXT_PAYMENT_HISTORY" xml:space="preserve">
     <value>Histórico de pagamento</value>
@@ -481,7 +481,7 @@
     <value>Métodos de pagamento</value>
   </data>
   <data name="TEXT_PAYMENT_TRANSACTIONS" xml:space="preserve">
-    <value>[pt-BR]Payment Transactions</value>
+    <value>Transações de pagamento</value>
   </data>
   <data name="TEXT_PAYMENTS" xml:space="preserve">
     <value>Pagamentos</value>
@@ -502,13 +502,13 @@
     <value>Colocar relatórios adhoc na fila</value>
   </data>
   <data name="TEXT_QUOTING" xml:space="preserve">
-    <value>[pt-BR]Manage Quotes</value>
+    <value>Gerenciar cotações</value>
   </data>
   <data name="TEXT_QUOTING_LIST" xml:space="preserve">
-    <value>[pt-BR]View All Quotes</value>
+    <value>Exibir todas as cotações</value>
   </data>
   <data name="TEXT_REFRESH" xml:space="preserve">
-    <value>[pt-BR]Refresh</value>
+    <value>Atualizar</value>
   </data>
   <data name="TEXT_REJECTED_FILES" xml:space="preserve">
     <value>Arquivos rejeitados</value>
@@ -547,13 +547,13 @@
     <value>Segurança</value>
   </data>
   <data name="TEXT_SELF_CARE_PORTAL" xml:space="preserve">
-    <value>[pt-BR]Self Care Portal</value>
+    <value>Portal de auto-atendimento</value>
   </data>
   <data name="TEXT_SEND_EMAIL_DIALOG" xml:space="preserve">
     <value>Enviar e-mail</value>
   </data>
   <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
-    <value>[pt-BR]Shared Properties</value>
+    <value>Propriedades compartilhadas</value>
   </data>
   <data name="TEXT_SHARED_RATES" xml:space="preserve">
     <value>Taxas compartilhadas</value>
@@ -562,7 +562,7 @@
     <value>Exibir detalhes da instância do relatório</value>
   </data>
   <data name="TEXT_SHOW_ALL_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Ver todas as alterações</value>
+    <value>Exibir todas as alterações</value>
   </data>
   <data name="TEXT_SHOW_ALL_REPORT_PARAMETERS" xml:space="preserve">
     <value>Exibir todos os parâmetros de relatório</value>
@@ -574,13 +574,13 @@
     <value>Fila de exportação de dados</value>
   </data>
   <data name="TEXT_SHOW_FAILED_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Ver mudanças falharam</value>
+    <value>Exibir alterações com falha</value>
   </data>
   <data name="TEXT_SHOW_ITEM_HISTORY" xml:space="preserve">
-    <value>[pt-BR]View Item History</value>
+    <value>Exibir histórico de item</value>
   </data>
   <data name="TEXT_SHOW_PENDING_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Visualizar as alterações pendentes</value>
+    <value>Exibir alterações pendentes</value>
   </data>
   <data name="TEXT_SUBSCRIBER_LOG_ADD" xml:space="preserve">
     <value>Adicionar entrada de log</value>
@@ -622,7 +622,7 @@
     <value>Atualizar conta</value>
   </data>
   <data name="TEXT_UPDATE_CONTACT" xml:space="preserve">
-    <value>Atualizar contatos</value>
+    <value>Contatos</value>
   </data>
   <data name="TEXT_UPDATE_EXISTING_REPORT_DEFINITIONS" xml:space="preserve">
     <value>Atualizar definição de relatório existente</value>
@@ -631,51 +631,48 @@
     <value>Manutenção do servidor de utilização</value>
   </data>
   <data name="TEXT_USM_CONFIG" xml:space="preserve">
-    <value>Configuração USM</value>
+    <value>Servidor de utilização</value>
   </data>
   <data name="TEXT_VERSION_INFO" xml:space="preserve">
     <value>Informação da versão</value>
   </data>
   <data name="TEXT_VIEW_CREDIT_NOTES_ISSUED" xml:space="preserve">
-    <value>[pt-BR]View Credit Notes Issued</value>
+    <value>Exibir todas de crédito emitidas</value>
   </data>
   <data name="TEXT_VIEW_METERING_STATISTICS" xml:space="preserve">
-    <value>Exibir</value>
+    <value>Todos os eventos</value>
   </data>
   <data name="TEXT_VIEWONLINE_BILL" xml:space="preserve">
     <value>Exibir fatura online</value>
   </data>
   <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
-    <value>[pt-BR]Usage Audit</value>
+    <value>Auditoria de utilização</value>
   </data>
   <data name="TEXT_ADD_TENANT" xml:space="preserve">
-    <value>[pt-BR]Add Partition</value>
+    <value>Adicionar partição</value>
   </data>
   <data name="TEXT_REPORTS" xml:space="preserve">
-    <value>[pt-BR]Reports</value>
+    <value>Relatórios</value>
   </data>
   <data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
-    <value>[pt-BR]Usage Processing</value>
+    <value>Processamento de utilização</value>
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
-    <value>[pt-BR]Account</value>
+    <value>Conta</value>
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
-    <value>[pt-BR]Bill Messages</value>
+    <value>Mensagens de conta</value>
   </data>
   <data name="TEXT_FINANCE_DASHBOARD" xml:space="preserve">
-    <value>[pt-BR]Finance Dashboard</value>
+    <value>Painel de finanças</value>
   </data>
   <data name="TEXT_MANAGE_BILL_MESSAGES" xml:space="preserve">
-    <value>[pt-BR]Manage Bill Messages</value>
+    <value>Gerenciar mensagens de fatura</value>
   </data>
   <data name="TEXT_OPERATIONS_DASHBOARD" xml:space="preserve">
-    <value>[pt-BR]Operations Dashboard</value>
+    <value>Painel de operações</value>
   </data>
   <data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
-    <value>[pt-BR]Product Dashboard</value>
-  </data>
-  <data name="TEXT_SEARCH" xml:space="preserve">
-    <value>[pt-BR]Search</value>
+    <value>Painel de produto</value>
   </data>
 </root>
