--- a/App_LocalResources/AdvancedFind.aspx.pt-br.resx
+++ b/App_LocalResources/AdvancedFind.aspx.pt-br.resx
@@ -130,12 +130,12 @@
     <value>Nenhum registro encontrado.</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet</value>
+    <value>MetraNet </value>
   </data>
   <data name="InvoiceSearch.Text" xml:space="preserve">
-    <value>[pt-BR]Search by Invoice Number</value>
+    <value>Pesquisar por número de fatura</value>
   </data>
   <data name="labelInvoiceNumber.Text" xml:space="preserve">
-    <value>[pt-BR]Invoice Number:</value>
+    <value>Número da fatura:</value>
   </data>
 </root>
