--- a/App_LocalResources/Login.aspx.pt-br.resx
+++ b/App_LocalResources/Login.aspx.pt-br.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lblDetailsResource1.Text" xml:space="preserve">
-    <value>Detalhes</value>
+    <value>detalhes</value>
   </data>
   <data name="lblMessageResource1.Text" xml:space="preserve">
     <value>Sua senha expirou</value>
@@ -127,7 +127,7 @@
     <value>Altere sua senha</value>
   </data>
   <data name="Login1Resource1.FailureText" xml:space="preserve">
-    <value>Sua tentativa de login não foi bem sucedida. Tente novamente.</value>
+    <value>Sua tentativa de login não foi bem-sucedida. Tente novamente.</value>
   </data>
   <data name="Login1Resource1.LoginButtonText" xml:space="preserve">
     <value>Fazer login</value>
@@ -148,10 +148,10 @@
     <value>O nome do usuário é obrigatório.</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet | Fazer login</value>
+    <value>MetraNet | Login</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirmar senha</value>
+    <value>Senha de confirmação</value>
   </data>
   <data name="tbConfirmPasswordResource1.LabelWidth" xml:space="preserve">
     <value>120</value>
