--- a/ApprovalFrameworkManagement/App_LocalResources/ChangeSubmittedConfirmation.aspx.pt-br.resx
+++ b/ApprovalFrameworkManagement/App_LocalResources/ChangeSubmittedConfirmation.aspx.pt-br.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lblCaptionResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Change Submitted Confirmation</value>
+    <value>Confirmação de envio de alteração</value>
   </data>
   <data name="Panel1Resource1.Text" xml:space="preserve">
-    <value>[pt-BR]Change Submitted Successfully to Approval Framework</value>
+    <value>Alteração enviada com sucesso para a estrutura de aprovação</value>
   </data>
   <data name="lblContentsResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Change Submitted Successfully to Approval Framework.</value>
+    <value>Alteração enviada com sucesso para a estrutura de aprovação.</value>
   </data>
   <data name="btnOKResource1.Text" xml:space="preserve">
-    <value>[pt-BR]OK</value>
+    <value>OK</value>
   </data>
 </root>
