--- a/ApprovalFrameworkManagement/App_LocalResources/ShowChangesSummary.aspx.pt-br.resx
+++ b/ApprovalFrameworkManagement/App_LocalResources/ShowChangesSummary.aspx.pt-br.resx
@@ -118,45 +118,45 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TEXT_APPROVAL_CHANGE_APPROVER_ID" xml:space="preserve">
-    <value>[pt-BR]Approver ID</value>
+    <value>ID do aprovador</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_COMMENT" xml:space="preserve">
-    <value>[pt-BR]Comment</value>
+    <value>Comentário</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_CURRENT_STATE" xml:space="preserve">
-    <value>[pt-BR]Current State</value>
+    <value>Estado atual</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_ID" xml:space="preserve">
-    <value>[pt-BR]Action</value>
+    <value>Ação</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_LAST_MODIFIED_DATE" xml:space="preserve">
-    <value>[pt-BR]Last Modified Date</value>
+    <value>Última data de modificação</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_SUBMITTED_DATE" xml:space="preserve">
-    <value>[pt-BR]Submitted Date</value>
+    <value>Nome de envio</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_SUBMITTER_DISPLAYNAME" xml:space="preserve">
-    <value>[pt-BR]Submitter</value>
+    <value>Remetente</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_SUBMITTER_ID" xml:space="preserve">
-    <value>[pt-BR]Submitter ID</value>
+    <value>ID do remetente</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_TYPE" xml:space="preserve">
-    <value>[pt-BR]Type</value>
+    <value>Tipo</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_UNIQUE_ITEM_ID" xml:space="preserve">
-    <value>[pt-BR]Modified Item ID</value>
+    <value>ID de item modificado</value>
   </data>
   <data name="TEXT_APPROVAL_NO_RECORD_TEXT" xml:space="preserve">
-    <value>[pt-BR]No Records Found</value>
+    <value>Nenhum registro encontrado</value>
   </data>
   <data name="TEXT_APPROVAL_VIEW_CHANGES_SUMMARY" xml:space="preserve">
-    <value>[pt-BR]View Changes</value>
+    <value>Exibir alterações</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_STATE_DISPLAYNAME" xml:space="preserve">
-    <value>[pt-BR]State</value>
+    <value>Estado</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_UNIQUE_ITEM_DISPLAYNAME" xml:space="preserve">
-    <value>[pt-BR]Modified Item</value>
+    <value>Item modificado</value>
   </data>
 </root>
