--- a/ApprovalFrameworkManagement/App_LocalResources/ShowProductOfferingChangeDetails.aspx.pt-br.resx
+++ b/ApprovalFrameworkManagement/App_LocalResources/ShowProductOfferingChangeDetails.aspx.pt-br.resx
@@ -117,34 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="TEXT_APPROVALS_CHANGEDETAILS_UPDATEDVALUE" xml:space="preserve">
-    <value>新しい値</value>
+  <data name="TEXT_APPROVAL_VIEW_PRODUCT_OFFERING_CHANGE_DETAILS" xml:space="preserve">
+    <value>Detalhes de alteração da oferta de produto</value>
   </data>
-  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_CURRENTVALUE" xml:space="preserve">
-    <value>前の値</value>
+  <data name="TEXT_APPROVAL_PRODUCTOFFERINGCHANGEDETAILS_PROPERTYNAME" xml:space="preserve">
+    <value>Nome da propriedade</value>
   </data>
-  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_ENDDATE" xml:space="preserve">
-    <value>終了日</value>
+  <data name="TEXT_APPROVAL_PRODUCTOFFERINGCHANGEDETAILS_CURRENTVALUE" xml:space="preserve">
+    <value>Valor atual</value>
   </data>
-  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_GROUPSUBID" xml:space="preserve">
-    <value>グループ利用 ID</value>
+  <data name="TEXT_APPROVAL_PRODUCTOFFERINGCHANGEDETAILS_UPDATEDVALUE" xml:space="preserve">
+    <value>Valor atualizado</value>
   </data>
-  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_MEMBERID" xml:space="preserve">
-    <value>メンバー ID</value>
+  <data name="TEXT_APPROVAL_BUTTON_APPROVE_CHANGE" xml:space="preserve">
+    <value>Aprovar</value>
   </data>
-  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_PROPERTYNAME" xml:space="preserve">
-    <value>プロパティ名</value>
+  <data name="TEXT_APPROVAL_BUTTON_DISMISS_CHANGE" xml:space="preserve">
+    <value>Rejeitar</value>
   </data>
-  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_STARTDATE" xml:space="preserve">
-    <value>開始日</value>
-  </data>
-  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_OLD_STARTDATE" xml:space="preserve">
-    <value>以前の開始日</value>
-  </data>
-  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_OLD_ENDDATE" xml:space="preserve">
-    <value>以前の終了日</value>
-  </data>
-  <data name="TEXT_APPROVAL_GROUP_SUBSCRIPTION_CHANGE_DETAILS" xml:space="preserve">
-    <value>グループ利用メンバーが更新されました</value>
+  <data name="TEXT_APPROVAL_BUTTON_BACK" xml:space="preserve">
+    <value>Voltar</value>
   </data>
 </root>
