--- a/NonStandardCharges/App_LocalResources/IssueNonStandardCharge.aspx.pt-br.resx
+++ b/NonStandardCharges/App_LocalResources/IssueNonStandardCharge.aspx.pt-br.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTPanel1Resource1.Text" xml:space="preserve">
-    <value>Emitir cobranças extraordinárias</value>
+    <value>Emitir cobrança extraordinária</value>
   </data>
   <data name="dbCurrencyResource1.Label" xml:space="preserve">
     <value>Moeda</value>
@@ -169,7 +169,7 @@
     <value>Cobrança pendente extraordinária criada</value>
   </data>
   <data name="TEXT_PROCESSING_ERROR" xml:space="preserve">
-    <value>Ocorreu um erro durante o processamento da cobrança extraordinária.</value>
+    <value>Ocorreu um erro durante o processamento de uma cobrança extraordinária.</value>
   </data>
   <data name="TEXT_THROUGH" xml:space="preserve">
     <value>Através</value>
