--- a/Payments/App_LocalResources/CreditCardRemove.aspx.pt-br.resx
+++ b/Payments/App_LocalResources/CreditCardRemove.aspx.pt-br.resx
@@ -117,37 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lblShowExportDashboardDetailsTitleResource1.Text" xml:space="preserve">
-    <value>Painel da estrutura de exportação de dados</value>
+  <data name="btnCancelResource1.Text" xml:space="preserve">
+    <value>Não</value>
   </data>
-  <data name="lblShowExportDashboardDetailsTitleResource1.ToolTip" xml:space="preserve">
-    <value></value>
+  <data name="btnOKResource1.Text" xml:space="preserve">
+    <value>Sim</value>
   </data>
-  <data name="MyGrid1Resource1.ToolTip" xml:space="preserve">
-    <value></value>
+  <data name="lblConfirmResource1.Text" xml:space="preserve">
+    <value>Tem certeza que deseja excluir o cartão de crédito abaixo?</value>
+  </data>
+  <data name="lblErrorMessageResource1.Text" xml:space="preserve">
+    <value>Mensagens de erro</value>
+  </data>
+  <data name="MTTitle1Resource1.Text" xml:space="preserve">
+    <value>Remover cartão de crédito</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>Painel da estrutura de exportação de dados</value>
-  </data>
-  <data name="TEXT_DEF_DESCRIPTION" xml:space="preserve">
-    <value>Descrição</value>
-  </data>
-  <data name="TEXT_DEF_DESTINATION" xml:space="preserve">
-    <value>Destino</value>
-  </data>
-  <data name="TEXT_DEF_EXECUTION_TYPE" xml:space="preserve">
-    <value>Tipo de execução</value>
-  </data>
-  <data name="TEXT_DEF_LAST_RUN_DATE" xml:space="preserve">
-    <value>Data de início da execução</value>
-  </data>
-  <data name="TEXT_DEF_NAME" xml:space="preserve">
-    <value>Nome</value>
-  </data>
-  <data name="TEXT_DEF_NEXT_RUN_DATE" xml:space="preserve">
-    <value>Data de término da execução</value>
-  </data>
-  <data name="TEXT_DEF_REPORT_TITLE" xml:space="preserve">
-    <value>Título do relatório</value>
+    <value>MetraNet</value>
   </data>
 </root>
