--- a/Quoting/App_LocalResources/CreateQuote.aspx.pt-br.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.pt-br.resx
@@ -118,198 +118,198 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="btnGenerateQuoteResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Generate Quote</value>
+    <value>Gerar cotação</value>
   </data>
   <data name="MTPanelQuoteParametersResource.Text" xml:space="preserve">
-    <value>[pt-BR]Quote Information</value>
+    <value>Informações da cotação</value>
   </data>
   <data name="dpStartDateResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Start date</value>
+    <value>Data de início</value>
   </data>
   <data name="MTPanelQuoteAccountsResource.Text" xml:space="preserve">
-    <value>[pt-BR]Accounts and product offerings</value>
+    <value>Contas e ofertas de produto</value>
   </data>
   <data name="dpEndDateResource1.Label" xml:space="preserve">
-    <value>[pt-BR]End date</value>
+    <value>Data de término</value>
   </data>
   <data name="MTCheckBoxPdfResource.Text" xml:space="preserve">
-    <value>[pt-BR]Generate PDF report</value>
+    <value>Gerar relatório PDF</value>
   </data>
   <data name="MTCheckBoxPdfResource.BoxLabel" xml:space="preserve">
-    <value>[pt-BR]Generate PDF report</value>
+    <value>Gerar relatório PDF</value>
   </data>
   <data name="MTTextBoxControlQuoteDescriptionResource.Text" xml:space="preserve">
-    <value>[pt-BR]Quote Description</value>
+    <value>Descrição da cotação</value>
   </data>
   <data name="MTPanelUDRCResource.Text" xml:space="preserve">
-    <value>[pt-BR]UDRC metrics</value>
+    <value>Métricas UDRC</value>
   </data>
   <data name="MTPanelICBResource.Text" xml:space="preserve">
-    <value>[pt-BR]Custom Rates</value>
+    <value>Taxas personalizadas</value>
   </data>
   <data name="ACTIONS" xml:space="preserve">
-    <value>[pt-BR]Actions</value>
+    <value>Ações</value>
   </data>
   <data name="GRID_TITLE" xml:space="preserve">
-    <value>[pt-BR]Accounts</value>
+    <value>Contas</value>
   </data>
   <data name="REMOVE_ACCOUNT" xml:space="preserve">
-    <value>[pt-BR]Remove Account</value>
+    <value>Remover conta</value>
   </data>
   <data name="SELECT_ACCOUNTS" xml:space="preserve">
-    <value>[pt-BR]Select Accounts</value>
+    <value>Selecionar contas</value>
   </data>
   <data name="USERNAME" xml:space="preserve">
-    <value>[pt-BR]User Name</value>
+    <value>Nome do usuário</value>
   </data>
   <data name="POID" xml:space="preserve">
-    <value>[pt-BR]PO Id</value>
+    <value>Id de PO</value>
   </data>
   <data name="PONAME" xml:space="preserve">
-    <value>[pt-BR]PO Name</value>
+    <value>Nome de PO</value>
   </data>
   <data name="PO_GRID_TITLE" xml:space="preserve">
-    <value>[pt-BR]Product Offerings</value>
+    <value>Ofertas de produto</value>
   </data>
   <data name="REMOVE_PO" xml:space="preserve">
-    <value>[pt-BR]Remove Product Offering</value>
+    <value>Remover oferta de produto</value>
   </data>
   <data name="SELECT_POS" xml:space="preserve">
-    <value>[pt-BR]Select Product Offerings</value>
+    <value>Selecionar ofertas de produto</value>
   </data>
   <data name="EDIT_UDRC_VALUE" xml:space="preserve">
-    <value>[pt-BR]Edit UDRC value</value>
+    <value>Editar valor UDRC</value>
   </data>
   <data name="ADD_ICB" xml:space="preserve">
-    <value>[pt-BR]Add ICB</value>
+    <value>Adicionar ICB</value>
   </data>
   <data name="BASE_AMOUNT" xml:space="preserve">
-    <value>[pt-BR]Base Amount</value>
+    <value>Valor base</value>
   </data>
   <data name="ICB_GRID_TITLE" xml:space="preserve">
-    <value>[pt-BR]ICBs</value>
+    <value>ICBs</value>
   </data>
   <data name="PIID" xml:space="preserve">
-    <value>[pt-BR]PI Id</value>
+    <value>ID de PI</value>
   </data>
   <data name="PINAME" xml:space="preserve">
-    <value>[pt-BR]PI Name</value>
+    <value>Nome de PI</value>
   </data>
   <data name="ICB_PI_GRID_TITLE" xml:space="preserve">
-    <value>[pt-BR]Priсeable Items That Allows Custom Rates</value>
+    <value>Itens cobráveis que permite taxas personalizadas</value>
   </data>
   <data name="PRICE" xml:space="preserve">
-    <value>[pt-BR]Price</value>
+    <value>Preço</value>
   </data>
   <data name="UNIT_AMOUNT" xml:space="preserve">
-    <value>[pt-BR]Unit Amount</value>
+    <value>Quantidade de unidade</value>
   </data>
   <data name="UNIT_VALUE" xml:space="preserve">
-    <value>[pt-BR]Unit Value</value>
+    <value>Valor da unidade</value>
   </data>
   <data name="ISGROUP.BoxLabel" xml:space="preserve">
-    <value>[pt-BR]Is Group Subscription</value>
+    <value>É assinatura em grupo</value>
   </data>
   <data name="ISGROUP" xml:space="preserve">
-    <value>[pt-BR]Is corp.</value>
+    <value>é corp.</value>
   </data>
   <data name="ADD_UDRC" xml:space="preserve">
-    <value>[pt-BR]Add UDRC</value>
+    <value>Adicionar UDRC</value>
   </data>
   <data name="UDRC_GRID_TITLE" xml:space="preserve">
-    <value>[pt-BR]UDRC metrics</value>
+    <value>Métricas UDRC</value>
   </data>
   <data name="UDRC_PI_GRID_TITLE" xml:space="preserve">
-    <value>[pt-BR]UDRC Priсeable Items</value>
+    <value>Itens cobráveis UDRC</value>
   </data>
   <data name="TEXT_ADD_ICB" xml:space="preserve">
-    <value>[pt-BR]Add Custom Rate</value>
+    <value>Adicionar taxa personalizada</value>
   </data>
   <data name="MTbtnCancelResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Cancel</value>
+    <value>Cancelar</value>
   </data>
   <data name="MTTitleCreateQuoteResource.Text" xml:space="preserve">
-    <value>[pt-BR]Manage Quote</value>
+    <value>Gerenciar cotação</value>
   </data>
   <data name="REMOVE_ICB" xml:space="preserve">
-    <value>[pt-BR]Remove ICB</value>
+    <value>Remover ICB</value>
   </data>
   <data name="REMOVE_UDRC" xml:space="preserve">
-    <value>[pt-BR]Remove UDRC</value>
+    <value>Remover UDRC</value>
   </data>
   <data name="TEXT_ADDING_ICB" xml:space="preserve">
-    <value>[pt-BR]Adding ICB</value>
+    <value>Adicionando ICB</value>
   </data>
   <data name="TEXT_ADD_UDRC" xml:space="preserve">
-    <value>[pt-BR]Add UDRC metric</value>
+    <value>Adicionar métrica UDRC</value>
   </data>
   <data name="TEXT_CANCEL" xml:space="preserve">
-    <value>[pt-BR]Cancel</value>
+    <value>Cancelar</value>
   </data>
   <data name="TEXT_DATES_ERROR" xml:space="preserve">
-    <value>[pt-BR]Start Date should be less then End Date</value>
+    <value>A data de início deve ser menor que a data de término</value>
   </data>
   <data name="TEXT_END_DATE" xml:space="preserve">
-    <value>[pt-BR]End Date</value>
+    <value>Data de término</value>
   </data>
   <data name="TEXT_MISSED_UDRC" xml:space="preserve">
-    <value>[pt-BR]UDRC metrics set not for all Priceable Items</value>
+    <value>Métricas UDRC não definidas para todos os itens cobráveis</value>
   </data>
   <data name="TEXT_OK" xml:space="preserve">
-    <value>[pt-BR]OK</value>
+    <value>OK</value>
   </data>
   <data name="TEXT_START_DATE" xml:space="preserve">
-    <value>[pt-BR]Start Date</value>
+    <value>Data de início</value>
   </data>
   <data name="TEXT_VALUE" xml:space="preserve">
-    <value>[pt-BR]Value</value>
+    <value>Valor</value>
   </data>
   <data name="ICB_GROUP_CONFIRM" xml:space="preserve">
-    <value>[pt-BR]ICB for group subscriptions will not be applied (current limitation)</value>
+    <value>ICB para assinaturas em grupo não será aplicado (limitação atual)</value>
   </data>
   <data name="btnConvertQuoteResource.Text" xml:space="preserve">
-    <value>[pt-BR]Convert to Subscription</value>
+    <value>Converter para assinatura</value>
   </data>
   <data name="MTPanelLog.Text" xml:space="preserve">
-    <value>[pt-BR]Quote Log / Failed Message</value>
+    <value>Log de cotação / mensagem com falha</value>
   </data>
   <data name="MTPanelResult.Text" xml:space="preserve">
-    <value>[pt-BR]Quote Details</value>
+    <value>Detalhes da cotação</value>
   </data>
   <data name="QuoteFailed.Label" xml:space="preserve">
-    <value>[pt-BR]Failed Message</value>
+    <value>Mensagem com falha</value>
   </data>
   <data name="QuoteLog.Label" xml:space="preserve">
-    <value>[pt-BR]Quote Log</value>
+    <value>Log da cotação</value>
   </data>
   <data name="MTPanelUDRCandICBResource.Text" xml:space="preserve">
-    <value>[pt-BR]UDRC metrics and ICBs</value>
+    <value>Métricas UDRC e ICBs</value>
   </data>
   <data name="MTdpCreationDateResource.Label" xml:space="preserve">
-    <value>[pt-BR]Creation Date</value>
+    <value>Data de criação</value>
   </data>
   <data name="MTTextBoxControlStatusResource.Label" xml:space="preserve">
-    <value>[pt-BR]Quote Status</value>
+    <value>Status de cotação</value>
   </data>
   <data name="MTTextBoxControlGroupResource.Label" xml:space="preserve">
-    <value>[pt-BR]Group Subscription</value>
+    <value>Assinatura em grupo</value>
   </data>
   <data name="MTTextBoxControlTotalResource.Label" xml:space="preserve">
-    <value>[pt-BR]Total Amount</value>
+    <value>Valor total</value>
   </data>
   <data name="MTTextBoxControlTotalTaxResource.Label" xml:space="preserve">
-    <value>[pt-BR]Total Tax</value>
+    <value>Imposto total</value>
   </data>
   <data name="MTtbQuoteIdentifierResource.Label" xml:space="preserve">
-    <value>[pt-BR]Quote Identifier</value>
+    <value>Identificador da cotação</value>
   </data>
   <data name="MTtbQuoteDescriptionResource.Label" xml:space="preserve">
-    <value>[pt-BR]Quote Description</value>
+    <value>Descrição da cotação</value>
   </data>
   <data name="REPORT_LINK_TEXT" xml:space="preserve">
-    <value>[pt-BR]PDF report for quote</value>
+    <value>Relatório em PDF para cotação</value>
   </data>
   <data name="TEXT_ISGROUP_CHEKED" xml:space="preserve">
-    <value>[pt-BR]Corporate account for group subscription should be selected.</value>
+    <value>Deve ser selecionada uma conta corporativa para assinatura de grupo.</value>
   </data>
 </root>
