--- a/Quoting/App_LocalResources/QuoteList.aspx.pt-br.resx
+++ b/Quoting/App_LocalResources/QuoteList.aspx.pt-br.resx
@@ -118,64 +118,64 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="CREATE_QUOTE" xml:space="preserve">
-    <value>[pt-BR]Create quote</value>
+    <value>Criar cotação</value>
   </data>
   <data name="CREATION_DATE" xml:space="preserve">
-    <value>[pt-BR]Creation date</value>
+    <value>Data de criação</value>
   </data>
   <data name="CURRENCY" xml:space="preserve">
-    <value>[pt-BR]Currency</value>
+    <value>Moeda</value>
   </data>
   <data name="ID_QUOTE" xml:space="preserve">
-    <value>[pt-BR]Quote Id</value>
+    <value>ID da cotação</value>
   </data>
   <data name="IS_GROUPSUBSCRIPTION" xml:space="preserve">
-    <value>[pt-BR]Is group subscription</value>
+    <value>É assinatura em grupo</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>[pt-BR]Quotes List</value>
+    <value>Lista de cotações</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>[pt-BR]MetraNet - Quotes List</value>
+    <value>MetraNet - Lista de cotações</value>
   </data>
   <data name="QUOTE_ACCOUNTS" xml:space="preserve">
-    <value>[pt-BR]Account's IDs</value>
+    <value>IDs de conta</value>
   </data>
   <data name="QUOTE_DESCRIPTION" xml:space="preserve">
-    <value>[pt-BR]Quote description</value>
+    <value>Descrição da cotação</value>
   </data>
   <data name="QUOTE_FAILEDMESSAGE" xml:space="preserve">
-    <value>[pt-BR]Failed message</value>
+    <value>Mensagem com falha</value>
   </data>
   <data name="QUOTE_LIST" xml:space="preserve">
-    <value>[pt-BR]Quotes list</value>
+    <value>Lista de cotações</value>
   </data>
   <data name="QUOTE_PARAMETERS" xml:space="preserve">
-    <value>[pt-BR]Quote parameters</value>
+    <value>Parâmetros de cotação</value>
   </data>
   <data name="QUOTE_POS" xml:space="preserve">
-    <value>[pt-BR]Product offerings's IDs</value>
+    <value>ID das ofertas de produto</value>
   </data>
   <data name="QUOTE_STATUS" xml:space="preserve">
-    <value>[pt-BR]Quote status</value>
+    <value>Status de cotação</value>
   </data>
   <data name="QuoteListTitle.Text" xml:space="preserve">
-    <value>[pt-BR]Quotes List</value>
+    <value>Lista de cotações</value>
   </data>
   <data name="REPORT_LINK" xml:space="preserve">
-    <value>[pt-BR]Report link</value>
+    <value>Link de relatório</value>
   </data>
   <data name="STATUS_CLEANUP" xml:space="preserve">
-    <value>[pt-BR]Status cleanup</value>
+    <value>Limpeza de status</value>
   </data>
   <data name="STATUS_REPORT" xml:space="preserve">
-    <value>[pt-BR]Status report</value>
+    <value>Relatório de status</value>
   </data>
   <data name="TOTAL_AMOUNT" xml:space="preserve">
-    <value>[pt-BR]Total amount</value>
+    <value>Valor total</value>
   </data>
   <data name="TOTAL_TAX" xml:space="preserve">
-    <value>[pt-BR]Total Tax</value>
+    <value>Imposto total</value>
   </data>
   <data name="TEXT_ACTIONS" xml:space="preserve">
     <value>[pt-BR]Actions</value>
