--- a/Reporting/App_LocalResources/ShowConfiguredReport.aspx.pt-br.resx
+++ b/Reporting/App_LocalResources/ShowConfiguredReport.aspx.pt-br.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>[pt-BR]Report</value>
+    <value>Relatório</value>
   </data>
   <data name="TEXT_INTERVALS_TO_ARCHIVE_DT_END" xml:space="preserve">
-    <value>[pt-BR]End Date</value>
+    <value>Data de término</value>
   </data>
   <data name="TEXT_INTERVALS_TO_ARCHIVE_DT_START" xml:space="preserve">
-    <value>[pt-BR]Start Date</value>
+    <value>Data de início</value>
   </data>
   <data name="TEXT_INTERVALS_TO_ARCHIVE_ID_INTERVAL" xml:space="preserve">
-    <value>[pt-BR]Interval ID</value>
+    <value>ID do intervalo</value>
   </data>
 </root>
