--- a/UserControls/App_LocalResources/AmpFixedOrPTCol.ascx.pt-BR.resx
+++ b/UserControls/App_LocalResources/AmpFixedOrPTCol.ascx.pt-BR.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="rblGetFrom.Text" xml:space="preserve">
-    <value>[pt-BR]Get from:</value>
+    <value>Obter de:</value>
   </data>
   <data name="rblHardcoded.Text" xml:space="preserve">
-    <value>[pt-BR]Fixed value:</value>
+    <value>Valor fixo:</value>
   </data>
 </root>
